Add about and methodology section

--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
         <a href="#gdp" class="w3-bar-item w3-button w3-hide-small">GDP</a>
         <a href="#trade" class="w3-bar-item w3-button w3-hide-small">IMPORT/EXPORT</a>
         <a href="#indicators" class="w3-bar-item w3-button w3-hide-small">INDICATORS</a>
-        <button id="reloadButton" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-refresh"></i> Rebuild</button>
+        <a href="#methodology" class="w3-bar-item w3-button w3-hide-small">METHODOLOGY</a>
+        <button id="reloadButton" id="#align-right" class="w3-bar-item w3-button w3-hide-small" style="float: right;"><i class="fa fa-refresh"></i> Rebuild</button>
     </div>
 </div>
 
@@ -66,24 +67,23 @@
 
 <!-- About -->
 <div class="w3-content w3-container w3-padding-64" id="about">
-    <h2 class="w3-center">What is this project about?</h2>
-    <h3>Motivation</h3>
-    <div class="m6 w3-hide-small w3-padding-large">
-        <p>Welcome! In here, you will be exploring the vast landscape of the U.S. economy through the lens of data visualization. We all know that money plays a crucial role in shaping our world, and recent events such as the tech layoffs during the COVID-19 pandemic and the economic transformations in cities like San Francisco have captured my attention. I'm passionate about understanding how these economic shifts impact not only my life but also my community.</p>
-    </div>
-    <h3>Purpose</h3>
-    <div class="m6 w3-hide-small w3-padding-large">
-        <p>Through thorough analysis of economic data and its historical trajectory, I aim to uncover meaningful patterns that can aid me in navigating future changes with greater insight. Given that economic insights are often communicated through visual representations, this project offers an exciting opportunity to deepen my understanding of both economics and data visualization techniques. Through my engaging narrative and immersive data visualizations, I aim to provide you with a comprehensive understanding of the US economy's evolution and dynamics over time.</p>
-    </div>
-    <h3>Features</h3>
-    <div class="m6 w3-hide-small w3-padding-large">
-        <p>We kick off by delving into the nation's Gross Domestic Product (GDP) over the past half-century, showcasing its growth trajectory through a visually rich streamgraph. Additionally, I provide a choropleth world map depicting GDP per capita, allowing you to contextualize the US economy within the global landscape.<br><br>Continuing our exploration, I delve into the dynamics of imports and exports using a comprehensive multiline chart. Through paired bar charts featuring sequential color schemes, I dissect major categories of imports and exports for specific years, offering insights into trade patterns and trends.<br><br>Transitioning to the realm of inflation, I present a diverging bar chart showcasing historical inflation rates. Furthermore, I investigate unemployment rates, drawing correlations between unemployment and inflation—a commonly discussed economic relationship.<br><br>Last but not least, I unveil a scatterplot comparing inflation rates and unemployment rates, inviting you to explore the validity of the Phillips curve hypothesis, which posits an inverse relationship between inflation and unemployment.</p>
-    </div>
-    <h3>Data</h3>
-    <div class="m6 w3-hide-small w3-padding-large">
-        <p>All the data used for this project was gathered from <a href="https://usafacts.org/economy/" style="font-size: 20px; color: #8cff79;">usafacts.org</a>.<br><br>Additionally, the data has been transposed and filtered to extract the required information.</p>
-    </div>
-    <h3 style="text-align: center;">Click on a section from the navbar or start scrolling to explore.</h3>
+    <h2>What is this project about?</h2>
+    <h4>This website serves as a gallery showcasing data visualizations that delve into various facets of the U.S. economy spanning the past century. Here, you'll gain insights into how the US GDP compares globally, the dynamics between imports and exports, as well as key economic indicators such as inflation and minimum wage.</h4>
+    <h4><strong>Note:</strong> This is best viewed on a desktop or laptop.</h4>
+    <br><br>
+    <h2>Guide</h2>
+    <h4>For each graph, you'll find instructions on how to interact with it:</h4>
+    <h4><strong>Hover:</strong> Simply hover over data points to access additional information about the data.</h4>
+    <h4><strong>Toggle button:</strong> Use toggle buttons to show or hide the best fit line.</h4>
+    <h4><strong>Dropdown menu:</strong> Select a specific year to view the corresponding data.</h4>
+    <h4><strong>Zoom:</strong> Scroll the mouse wheel to zoom in and out, or drag to adjust the position of the graph.</h4>
+    <br><br>
+    <h2>Rebuild Feature</h2>
+    <h4>At the top right corner of the website, you'll find a button like this:</h4>
+    <button id="reloadButton" class="w3-button w3-black w3-xlarge"><i class="fa fa-refresh"></i> Rebuild</button>
+    <h4>When interacting with any graph, don't forget to click <i>Rebuild</i>! This action allows you to observe how the graph is constructed or reset it to its default settings.</h4>
+    <br><br>
+    <h1 class="w3-center"><strong>Click on a section from the navbar or start scrolling to explore.</strong></h1>
 </div>
 
 <!-- GDP -->
@@ -197,6 +197,33 @@
     <p>However, upon closer examination, we notice that certain outlier data points seem to align with the general shape of the Phillips curve. This suggests that while the theory may not hold true across all situations, there are instances where it still provides a useful framework for understanding economic dynamics.</p>
     <p>This dynamic relationship underscores the fluid nature of our economy, constantly evolving in response to various factors such as technological advancements, globalization, and shifts in consumer behavior. Economic theories, while valuable, cannot capture the full complexity of human interactions and market dynamics.</p>
     <p>Nevertheless, studying the patterns that emerge from economic data allows us to gain insights into the underlying forces driving our economy. It provides a window into the intricate interplay between economic policy, societal changes, and human aspirations, offering valuable lessons for navigating the complexities of the modern world.</p>
+</div>
+
+<!-- Methodology -->
+<div class="bgimg-5 w3-display-container w3-opacity-min" id="methodology">
+    <div class="w3-display-middle" style="white-space:nowrap; bottom: 50%;">
+        <span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity">
+            What's the story behind the data?
+        </span>
+    </div>
+</div>
+<div class="m6 w3-hide-small w3-padding-large w3-content w3-container w3-padding-64">
+    <h3>Motivation</h3>
+    <div class="m6 w3-hide-small w3-padding-large">
+        <p>We all know that money plays a crucial role in shaping our world, and recent events such as the tech layoffs during the COVID-19 pandemic and the economic transformations in cities like San Francisco have captured my attention. I'm passionate about understanding how these economic shifts impact not only my life but also my community.</p>
+    </div>
+    <h3>Purpose</h3>
+    <div class="m6 w3-hide-small w3-padding-large">
+        <p>Through thorough analysis of economic data and its historical trajectory, I aim to uncover meaningful patterns that can aid me in navigating future changes with greater insight. Given that economic insights are often communicated through visual representations, this project offers an exciting opportunity to deepen my understanding of both economics and data visualization techniques. Through my engaging narrative and immersive data visualizations, I aim to provide you with a comprehensive understanding of the US economy's evolution and dynamics over time.</p>
+    </div>
+    <h3>Summary</h3>
+    <div class="m6 w3-hide-small w3-padding-large">
+        <p>We kick off by delving into the nation's Gross Domestic Product (GDP) over the past half-century, showcasing its growth trajectory through a visually rich streamgraph. Additionally, I provide a choropleth world map depicting GDP per capita, allowing you to contextualize the US economy within the global landscape.<br><br>Continuing our exploration, I delve into the dynamics of imports and exports using a comprehensive multiline chart. Through paired bar charts featuring sequential color schemes, I dissect major categories of imports and exports for specific years, offering insights into trade patterns and trends.<br><br>Transitioning to the realm of inflation, I present a diverging bar chart showcasing historical inflation rates. Furthermore, I investigate unemployment rates, drawing correlations between unemployment and inflation—a commonly discussed economic relationship.<br><br>Last but not least, I unveil a scatterplot comparing inflation rates and unemployment rates, inviting you to explore the validity of the Phillips curve hypothesis, which posits an inverse relationship between inflation and unemployment.</p>
+    </div>
+    <h3>Data</h3>
+    <div class="m6 w3-hide-small w3-padding-large">
+        <p>All the data used for this project was gathered from <a href="https://usafacts.org/data/topics/economy/" style="font-size: 20px; color: #8cff79;">usafacts.org</a>.<br><br>Additionally, the data has been transposed and filtered to extract the required information.</p>
+    </div>
 </div>
 
 <!-- Footer -->
