Increase axis tick size

--- a/index.html
+++ b/index.html
@@ -72,18 +72,18 @@
     <h4><strong>Note:</strong> This is best viewed on a desktop or laptop.</h4>
     <h4>To learn more about the project, <a href="#methodology" style="color: #8cff79;">click here</a>.</h4>
     <br><br>
-    <h2>Guide</h2>
-    <h4>For each graph, you'll find instructions on how to interact with it:</h4>
-    <h4><strong>Hover:</strong> Simply hover over data points to access additional information about the data.</h4>
-    <h4><strong>Toggle button:</strong> Use toggle buttons to show or hide the best fit line.</h4>
-    <h4><strong>Dropdown menu:</strong> Select a specific speed or year to view the corresponding data.</h4>
-    <h4><strong>Zoom:</strong> Scroll the mouse wheel to zoom in and out, or drag to adjust the position of the graph.</h4>
-    <br><br>
     <h2>Rebuild Feature</h2>
     <h4>At the top right corner of the website, you'll find a button like this:</h4>
     <br><button id="reloadButton" class="w3-button w3-black w3-xlarge"><i class="fa fa-refresh"></i> Rebuild</button><br>
     <h4>When interacting with any graph, don't forget to click <i>Rebuild</i>.</h4>
-    <h4>This action allows you to observe how the graph is constructed or reset it to its default position.</h4>
+    <h4>This action allows you to observe how the graph is constructed and reset it to its default position.</h4>
+    <br><br>
+    <h2>Guide</h2>
+    <h4>For each graph, you'll find interactions such as:</h4>
+    <h4><strong>Hover:</strong> Simply hover over data points to access additional information about the data.</h4>
+    <h4><strong>Toggle button:</strong> Use toggle buttons to show or hide the best fit line.</h4>
+    <h4><strong>Dropdown menu:</strong> Select a specific speed or year to view the corresponding data.</h4>
+    <h4><strong>Zoom:</strong> Scroll the mouse wheel to zoom in and out, or drag to adjust the position of the graph.</h4>
     <br><br><br>
     <h1 class="w3-center"><strong>Click on a section from the navbar or start scrolling to explore.</strong></h1>
 </div>
@@ -99,9 +99,9 @@
 
 <div class="m6 w3-hide-small w3-padding-large w3-content w3-container w3-padding-64">
     <h3>The United States has consistently maintained its <strong style="color: #8cff79;">leading position</strong> in GDP per capita over the past several decades.</h3>
-    <div id="world-map"></div>
-    <p style="text-align: center;">Try hovering over each country to see more.</p>
 </div>
+<div id="world-map"></div>
+<p style="text-align: center;">Try hovering over each country to see more.</p>
 <div class="m6 w3-hide-small w3-padding-large w3-content w3-container w3-padding-64">
     <h4>When we compare the economic output of the United States to other nations, we see something remarkable: our country stands out as a beacon of prosperity. On average, we generate more income than most other countries, placing us among the wealthiest globally. Our high GDP per capita reflects the strength of our economy and the standard of living enjoyed by our citizens.</h4>
     <br>
